--- a/AUTHORS
+++ b/AUTHORS
@@ -38,3 +38,4 @@ Yusuke Suzuki <utatane.tea@gmail.com>
 Dirac Research 
 Zbigniew Skowron <zbychs@gmail.com>
 Dominik Czarnota <dominik.b.czarnota@gmail.com>
+Björn Gaier <bjoerngaier@web.de>
